switched to using require and added powershell stuff

--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "appium-plugin",
+  "name": "custom-appium-plugin",
   "version": "1.0.0",
-  "description": "Trying out creating a custom appium plugin",
+  "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@appium/base-plugin": "^1.8.1",
     "full-powershell": "^2.1.0"
   },
+  "scripts": {
+    "pluginUninstall": "appium plugin uninstall process-status",
+    "pluginInstall": "appium plugin install --source=local ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VinayBerry/custom-appium-plugin.git"
+  },
   "appium": {
     "pluginName": "process-status",
     "mainClass": "ProcessStatusPlugin"
-  }
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/VinayBerry/custom-appium-plugin/issues"
+  },
+  "homepage": "https://github.com/VinayBerry/custom-appium-plugin#readme"
 }
